<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/body_background"
    android:paddingHorizontal="4dp"
    android:weightSum="8"
    android:paddingVertical="10dp"
    tools:context=".Screen_7days">

    <!-- Top bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/screen2_img1"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen2_layer1_text1"
            android:gravity="center"
            android:fontFamily="@font/inter"
            android:textSize="23sp"

            android:textColor="#313341"
            android:layout_gravity="center"
            android:layout_weight="2"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />

    </LinearLayout>
    <!-- Layer 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/screen2_layer2_back"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/screen2_layer2_text1"
                android:textColor="#303345"
                android:gravity="center"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/screen2_layer2_text2"
                android:textColor="#303345"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="116dp"
                android:layout_marginRight="5dp"
                />
            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/layer_6_img2"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="8dp"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/umbrella"
                    android:layout_gravity="center"
                    android:background="@drawable/image_back"
                    android:layout_marginHorizontal="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/screen2_layer2_text3"
                    android:textColor="#303345"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:paddingVertical="8dp"
                android:layout_weight="1"
                >

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/image_back"
                    android:src="@drawable/layer4_img2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/screen2_layer2_text4"
                    android:textColor="#303345"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                android:paddingVertical="8dp"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/layer4_img3"
                    android:layout_gravity="center"
                    android:background="@drawable/image_back"
                    android:layout_marginHorizontal="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/screen2_layer2_text5"
                    android:textColor="#303345"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <!-- Layer 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text1_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text1_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text2_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text2_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="end"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text3_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text3_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text4_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text4_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text5_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text5_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer4_item"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen2_layer3_text6_1"
                android:textColor="#303345"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/screen2_layer3_text6_2"
                android:layout_marginLeft="124dp"
                android:textColor="#303345"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/layer_6_img3"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>